--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,16 +7,13 @@
 
     </data>
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fillViewport="true"
-        tools:context=".view.fragment.HomeFragment">
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:fillViewport="true"
+            tools:context=".view.fragment.HomeFragment"
             android:background="@color/backgroundColor">
 
 
@@ -50,9 +47,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:backgroundTint="@color/secondaryColor"
+                    android:backgroundTint="@color/logoBackground"
                     app:icon="@drawable/round_search_24"
-                    app:iconTint="@color/primaryColor" />
+                    app:iconTint="@color/titleOne" />
 
             </LinearLayout>
 
@@ -82,7 +79,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:text="TRENDING NOW"
-                        android:textColor="#647281"
+                        android:textColor="@color/TitleTwo"
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
@@ -100,7 +97,7 @@
                         android:layout_weight="0"
                         android:includeFontPadding="false"
                         android:text="View All"
-                        android:textColor="#8AA0B3"
+                        android:textColor="@color/titleThree"
                         android:textStyle="bold"
                         app:iconPadding="0dp" />
                 </LinearLayout>
@@ -241,5 +238,4 @@
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
 </layout>
