--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="secondaryColor">#E5EAF0</color>
-    <color name="primaryColor">#5D728B</color>
+    <color name="logoBackground">#E5EAF0</color>
+    <color name="titleOne">#5D728B</color>
     <color name="backgroundColor">#ffECF0F5</color>
+    <color name="TitleTwo">#647281</color>
+    <color name="titleThree">#8AA0B3</color>
 </resources>
