--- a/app/src/main/res/layout/anime_title.xml
+++ b/app/src/main/res/layout/anime_title.xml
@@ -13,31 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="5dp">
 
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/cvRankAnimeTitle"
-            android:layout_width="36dp"
-            android:layout_height="36dp"
-            android:elevation="0dp"
-            android:visibility="invisible"
-            app:cardBackgroundColor="#EE5D5C"
-            app:cardMaxElevation="0dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:shapeAppearanceOverlay="@style/Circular">
 
-            <TextView
-                android:id="@+id/tvRankAnimeTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_margin="6dp"
-                android:text="#"
-                android:textColor="@color/white"
-                android:textSize="16sp"
-                android:textStyle="bold" />
-        </com.google.android.material.card.MaterialCardView>
 
         <LinearLayout
             android:id="@+id/llAnimeTitle"
@@ -68,6 +44,37 @@
                 android:textColor="#8AA0B3"
                 android:textSize="16sp" />
         </LinearLayout>
+
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/cvRankAnimeTitle"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:elevation="0dp"
+            android:visibility="invisible"
+            app:cardBackgroundColor="#EE5D5C"
+            app:cardMaxElevation="0dp"
+            app:layout_constraintBottom_toBottomOf="@+id/llAnimeTitle"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0"
+            app:shapeAppearanceOverlay="@style/Circular"
+            app:strokeWidth="0dp">
+
+            <TextView
+                android:id="@+id/tvRankAnimeTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="6dp"
+                android:gravity="center"
+                android:text="#"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:autoSizeTextType="uniform" />
+        </com.google.android.material.card.MaterialCardView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
