--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,7 +7,7 @@
 
     </data>
 
-    <androidx.core.widget.NestedScrollView
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true">
@@ -102,27 +102,14 @@
                         android:textColor="@color/titleThree"
                         android:textStyle="bold"
                         app:iconPadding="0dp" />
+
                 </LinearLayout>
 
-                <RelativeLayout
-                    android:id="@+id/rlSubSectionTrending"
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rvSubSectionTrending"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <ProgressBar
-                        android:id="@+id/pbSubSectionTrending"
-                        style="?android:attr/progressBarStyle"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerInParent="true"
-                        android:visibility="invisible" />
-
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/rvSubSectionTrending"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal" />
-                </RelativeLayout>
+                    android:layout_height="280dp"
+                    android:orientation="horizontal" />
 
             </LinearLayout>
 
@@ -178,7 +165,7 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rvSubSectionAllTimePopular"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="280dp"
                     android:orientation="horizontal" />
 
             </LinearLayout>
@@ -233,12 +220,12 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rvSubSectionTop100Anime"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:orientation="horizontal" />
 
             </LinearLayout>
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.core.widget.NestedScrollView>
+    </ScrollView>
 </layout>
