chore: app icon

--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,39 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="41.613"
+    android:viewportHeight="14.309">
+  <group android:scaleX="0.54388887"
+      android:scaleY="0.18702103"
+      android:translateX="9.490076"
+      android:translateY="5.816458">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="m4.382,10.23 l-0.45,-1.494l-2.096,0l-0.45,1.494l-1.386,0l2.07,-6.28l1.692,0l2.043,6.28zM2.897,5.192l-0.045,0l-0.693,2.384l1.44,0z"
+        android:fillColor="#5d728b"/>
+    <path
+        android:pathData="m6.604,10.23l0,-4.724l1.332,0l0,0.801l0.054,0q0.126,-0.369 0.441,-0.639 0.315,-0.27 0.873,-0.27 0.729,0 1.098,0.486 0.378,0.486 0.378,1.386l0,2.96l-1.332,0l0,-2.852q0,-0.459 -0.144,-0.675 -0.144,-0.225 -0.513,-0.225 -0.162,0 -0.315,0.045 -0.153,0.036 -0.279,0.126 -0.117,0.09 -0.189,0.225 -0.072,0.126 -0.072,0.297l0,3.059z"
+        android:fillColor="#5d728b"/>
+    <path
+        android:pathData="m12.633,5.003q-0.405,0 -0.594,-0.18 -0.18,-0.189 -0.18,-0.477l0,-0.198q0,-0.288 0.18,-0.468 0.189,-0.189 0.594,-0.189 0.405,0 0.585,0.189 0.189,0.18 0.189,0.468l0,0.198q0,0.288 -0.189,0.477 -0.18,0.18 -0.585,0.18zM11.967,5.507l1.332,0l0,4.724l-1.332,0z"
+        android:fillColor="#5d728b"/>
+    <path
+        android:pathData="m14.54,10.23l0,-4.724l1.332,0l0,0.801l0.054,0q0.126,-0.378 0.432,-0.639 0.306,-0.27 0.837,-0.27 0.486,0 0.828,0.243 0.342,0.243 0.495,0.711l0.027,0q0.063,-0.198 0.189,-0.369 0.135,-0.18 0.324,-0.306 0.189,-0.126 0.423,-0.198 0.234,-0.081 0.504,-0.081 0.684,0 1.044,0.486 0.369,0.486 0.369,1.386l0,2.96l-1.332,0l0,-2.852q0,-0.9 -0.648,-0.9 -0.297,0 -0.54,0.171 -0.243,0.171 -0.243,0.522l0,3.059l-1.332,0l0,-2.852q0,-0.9 -0.648,-0.9 -0.144,0 -0.288,0.045 -0.135,0.036 -0.252,0.126 -0.108,0.09 -0.18,0.225 -0.063,0.126 -0.063,0.297l0,3.059z"
+        android:fillColor="#5d728b"/>
+    <path
+        android:pathData="m24.555,10.338q-0.54,0 -0.963,-0.171 -0.423,-0.18 -0.72,-0.495 -0.288,-0.324 -0.441,-0.783 -0.144,-0.459 -0.144,-1.026 0,-0.558 0.144,-1.008 0.144,-0.459 0.423,-0.783 0.288,-0.324 0.702,-0.495 0.414,-0.18 0.945,-0.18 0.585,0 0.999,0.198 0.423,0.198 0.684,0.531 0.27,0.333 0.387,0.774 0.126,0.432 0.126,0.909l0,0.396l-3.032,0l0,0.072q0,0.468 0.252,0.747 0.252,0.27 0.792,0.27 0.414,0 0.675,-0.162 0.261,-0.171 0.486,-0.405l0.666,0.828q-0.315,0.369 -0.828,0.576 -0.504,0.207 -1.152,0.207zM24.528,6.379q-0.405,0 -0.639,0.27 -0.225,0.261 -0.225,0.702l0,0.072l1.656,0l0,-0.081q0,-0.432 -0.198,-0.693 -0.189,-0.27 -0.594,-0.27z"
+        android:fillColor="#5d728b"/>
+    <path
+        android:pathData="M30.41,0L39.529,0A2.084,2.084 135,0 1,41.613 2.084L41.613,12.225A2.084,2.084 135,0 1,39.529 14.309L30.41,14.309A2.084,2.084 135,0 1,28.326 12.225L28.326,2.084A2.084,2.084 45,0 1,30.41 0z"
+        android:strokeLineJoin="round"
+        android:strokeWidth="0"
+        android:fillColor="#e5eaf0"
+        android:strokeColor="#ffffff"
+        android:strokeLineCap="round"/>
+    <path
+        android:pathData="m30.466,10.106l0,-6.28l4.274,0l0,1.215l-2.906,0l0,1.287l2.492,0l0,1.206l-2.492,0l0,1.359l2.906,0l0,1.215z"
+        android:fillColor="#5d728b"/>
+    <path
+        android:pathData="m35.397,10.106 l1.557,-2.402 -1.539,-2.321l1.512,0l0.882,1.485l0.036,0l0.855,-1.485l1.404,0l-1.566,2.366 1.575,2.357l-1.512,0l-0.909,-1.539l-0.036,0l-0.873,1.539z"
+        android:fillColor="#5d728b"/>
+  </group>
 </vector>
