--- a/app/src/main/res/layout/anime_title.xml
+++ b/app/src/main/res/layout/anime_title.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
@@ -10,71 +11,78 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cvAnimeTitle"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_margin="5dp">
 
 
-
-        <LinearLayout
-            android:id="@+id/llAnimeTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:orientation="vertical"
+        <RelativeLayout
+            android:id="@+id/relativeLayout2"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintDimensionRatio="5:7.6"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
 
-            <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/ivAnimeTitle"
-                android:layout_width="150dp"
-                android:layout_height="214dp"
-                android:layout_marginBottom="16dp"
-                app:shapeAppearanceOverlay="@style/RoundedRect" />
-
-            <TextView
-                android:id="@+id/tvAnimeTitle"
+            <LinearLayout
+                android:id="@+id/llAnimeTitle"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:minLines="2"
-                android:maxLines="2"
-                android:ellipsize="end"
-                android:textColor="#8AA0B3"
-                android:textSize="16sp" />
-        </LinearLayout>
+                android:layout_height="match_parent"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp"
+                android:orientation="vertical">
 
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/cvRankAnimeTitle"
-            android:layout_width="36dp"
-            android:layout_height="36dp"
-            android:elevation="0dp"
-            android:visibility="invisible"
-            app:cardBackgroundColor="#EE5D5C"
-            app:cardMaxElevation="0dp"
-            app:layout_constraintBottom_toBottomOf="@+id/llAnimeTitle"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"
-            app:shapeAppearanceOverlay="@style/Circular"
-            app:strokeWidth="0dp">
 
-            <TextView
-                android:id="@+id/tvRankAnimeTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_margin="6dp"
-                android:gravity="center"
-                android:text="#"
-                android:textColor="@color/white"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                app:autoSizeTextType="uniform" />
-        </com.google.android.material.card.MaterialCardView>
+                <com.google.android.material.imageview.ShapeableImageView
+                    android:id="@+id/ivAnimeTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="8dp"
+                    android:layout_weight="9"
+                    app:shapeAppearanceOverlay="@style/RoundedRect" />
+
+                <TextView
+                    android:id="@+id/tvAnimeTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0"
+                    android:ellipsize="end"
+                    android:maxLines="2"
+                    android:minLines="2"
+                    android:textColor="#8AA0B3"
+                    android:textSize="14sp" />
+            </LinearLayout>
+
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/cvRankAnimeTitle"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:elevation="0dp"
+                android:visibility="invisible"
+                app:cardBackgroundColor="#EE5D5C"
+                app:cardMaxElevation="0dp"
+                app:shapeAppearanceOverlay="@style/Circular"
+                app:strokeWidth="0dp">
+
+                <TextView
+                    android:id="@+id/tvRankAnimeTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="6dp"
+                    android:gravity="center"
+                    android:text="#"
+                    android:textColor="@color/white"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    app:autoSizeTextType="uniform" />
+            </com.google.android.material.card.MaterialCardView>
+        </RelativeLayout>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
