--- a/app/src/main/res/layout/fragment_anime_details.xml
+++ b/app/src/main/res/layout/fragment_anime_details.xml
@@ -11,6 +11,7 @@
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:id="@+id/cLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -38,7 +39,7 @@
                         android:scaleType="centerCrop"
                         app:layout_collapseMode="parallax"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintDimensionRatio="16:9"
+                        app:layout_constraintDimensionRatio="16:7"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -82,13 +83,15 @@
                             android:ellipsize="end"
                             android:maxLines="2"
                             android:text="@{viewModel.animeDetailsState.title ?? viewModel.animeDetailsState.romanjiTitle ?? ``}"
+                            android:textColor="@color/title_color"
                             android:textSize="28sp" />
 
                         <TextView
                             android:id="@+id/tvStartYear"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@{viewModel.animeDetailsState.startYear??``}" />
+                            android:text="@{viewModel.animeDetailsState.startYear??``}"
+                            android:textColor="@color/subtitle_color" />
                     </LinearLayout>
 
                     <com.google.android.material.button.MaterialButton
@@ -120,7 +123,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="6dp"
-                        android:text="@{viewModel.animeDetailsState.description ?? `` }" />
+                        android:text="@{viewModel.animeDetailsState.description ?? `` }"
+                        android:textColor="#424C4B" />
                 </androidx.cardview.widget.CardView>
 
                 <LinearLayout
@@ -145,16 +149,21 @@
                             android:orientation="vertical">
 
                             <TextView
+                                android:id="@+id/tvHeadingFormat"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Format"
-                                android:textStyle="bold" />
+                                android:textColor="@color/title_color"
+                                android:textStyle="bold"
+                                android:visibility="invisible" />
 
                             <TextView
                                 android:id="@+id/tvFormat"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="@{viewModel.animeDetailsState.format ?? ``}" />
+                                android:text="@{viewModel.animeDetailsState.format ?? ``}"
+                                android:textColor="@color/subtitle_color"
+                                android:visibility="visible" />
                         </LinearLayout>
                     </androidx.cardview.widget.CardView>
 
@@ -179,16 +188,20 @@
                             android:padding="4dp">
 
                             <TextView
+                                android:id="@+id/tvHeadingEpisodes"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Episodes"
-                                android:textStyle="bold" />
+                                android:textColor="@color/title_color"
+                                android:textStyle="bold"
+                                android:visibility="invisible" />
 
                             <TextView
                                 android:id="@+id/tvEpisodes"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="@{viewModel.animeDetailsState.episodes==null ? `` : viewModel.animeDetailsState.episodes.toString()}" />
+                                android:text="@{viewModel.animeDetailsState.episodes==null ? `` : viewModel.animeDetailsState.episodes.toString()}"
+                                android:textColor="@color/subtitle_color" />
                         </LinearLayout>
                     </androidx.cardview.widget.CardView>
                 </LinearLayout>
@@ -216,16 +229,20 @@
                             android:padding="4dp">
 
                             <TextView
+                                android:id="@+id/tvHeadingDuration"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Duration"
-                                android:textStyle="bold" />
+                                android:textColor="@color/title_color"
+                                android:textStyle="bold"
+                                android:visibility="invisible" />
 
                             <TextView
                                 android:id="@+id/tvDuration"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="@{viewModel.animeDetailsState.duration==null ? `` : viewModel.animeDetailsState.duration.toString() + ` min` }" />
+                                android:text="@{viewModel.animeDetailsState.duration==null ? `` : viewModel.animeDetailsState.duration.toString() + ` min` }"
+                                android:textColor="@color/subtitle_color" />
                         </LinearLayout>
                     </androidx.cardview.widget.CardView>
 
@@ -250,16 +267,20 @@
                             android:padding="4dp">
 
                             <TextView
+                                android:id="@+id/tvHeadingStatus"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Status"
-                                android:textStyle="bold" />
+                                android:textColor="@color/title_color"
+                                android:textStyle="bold"
+                                android:visibility="invisible" />
 
                             <TextView
                                 android:id="@+id/tvStatus"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="@{viewModel.animeDetailsState.status ?? ``}" />
+                                android:text="@{viewModel.animeDetailsState.status ?? ``}"
+                                android:textColor="@color/subtitle_color" />
                         </LinearLayout>
                     </androidx.cardview.widget.CardView>
                 </LinearLayout>
@@ -287,16 +308,20 @@
                             android:padding="4dp">
 
                             <TextView
+                                android:id="@+id/tvHeadingGenres"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Generes"
-                                android:textStyle="bold" />
+                                android:textColor="@color/title_color"
+                                android:textStyle="bold"
+                                android:visibility="invisible" />
 
                             <TextView
                                 android:id="@+id/tvGenres"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="@{viewModel.animeDetailsState.genres ?? ``}" />
+                                android:text="@{viewModel.animeDetailsState.genres ?? ``}"
+                                android:textColor="@color/subtitle_color" />
                         </LinearLayout>
                     </androidx.cardview.widget.CardView>
 
@@ -321,16 +346,20 @@
                             android:padding="4dp">
 
                             <TextView
+                                android:id="@+id/tvHeadingMeanScore"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Mean Score"
-                                android:textStyle="bold" />
+                                android:textColor="@color/title_color"
+                                android:textStyle="bold"
+                                android:visibility="invisible" />
 
                             <TextView
                                 android:id="@+id/tvMeanScore"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="@{viewModel.animeDetailsState.meanScore==null? `` : viewModel.animeDetailsState.meanScore.toString()}" />
+                                android:text="@{viewModel.animeDetailsState.meanScore==null? `` : viewModel.animeDetailsState.meanScore.toString()}"
+                                android:textColor="@color/subtitle_color" />
                         </LinearLayout>
                     </androidx.cardview.widget.CardView>
                 </LinearLayout>
