--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,10 +6,11 @@
     <data>
 
     </data>
-<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+<com.aryan.animeexplorer.view.component.VerticalSwipeRefreshLayout
     android:id="@+id/srlHome"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -170,5 +171,5 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
-</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+</com.aryan.animeexplorer.view.component.VerticalSwipeRefreshLayout>
 </layout>
